--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <a href="#" class="text-2xl font-bold"><span class="bg-green-500 px-2 py-1 rounded">ICDSCI</span> 2025</a>
         <ul class="flex space-x-6">
           <li><a href="#home" class="hover:text-green-400">Home</a></li>
-          <li><a href="#about" class="hover:text-green-400">About</a></li>
-          <li><a href="#services" class="hover:text-green-400">Services</a></li>
+          <!-- <li><a href="#about" class="hover:text-green-400">About</a></li>
+          <li><a href="#services" class="hover:text-green-400">Services</a></li> -->
           <li><a href="#contact" class="hover:text-green-400">Contact</a></li>
         </ul>
       </div>
@@ -53,27 +53,27 @@
 
     <section id="new-section" class="py-12 bg-cover" style="background-image: url('img.jpg');">
       <div class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-        <div class="p-6 ml-2 mr-2 bg-gray-800 rounded">
+        <div class="p-6 ml-3 mr-3 bg-gray-800 rounded">
           <h3 class="text-2xl font-bold mb-2 underline-green">FOCUSED NETWORKING</h3>
           <p>Provides a free and open atmosphere where attendees talk and engage in creative ways.</p>
         </div>
-        <div class="p-6 ml-2 mr-2 bg-gray-800 rounded">
+        <div class="p-6 ml-3 mr-3 bg-gray-800 rounded">
           <h3 class="text-2xl font-bold mb-2 underline-green">EXPERT SPEAKERS</h3>
           <p>Our speakers represent the cream of research and development practitioners worldwide.</p>
         </div>
-        <div class="p-6 ml-2 mr-2 bg-gray-800 rounded">
+        <div class="p-6 ml-3 mr-3 bg-gray-800 rounded">
           <h3 class="text-2xl font-bold mb-2 underline-green">BRILLIANT IDEAS</h3>
           <p>High-impact, collaborative and new approaches to some of the world’s toughest problems.</p>
         </div>
-        <div class="p-6 ml-2 mr-2 bg-gray-800 rounded">
+        <div class="p-6 ml-3 mr-3 bg-gray-800 rounded">
           <h3 class="text-2xl font-bold mb-2 underline-green">EXCEPTIONAL PROGRAM</h3>
           <p>Includes demonstrations, keynote speeches, plenary panel, breakout sessions as well as the industry program.</p>
         </div>
-        <div class="p-6 ml-2 mr-2 bg-gray-800 rounded">
+        <div class="p-6 ml-3 mr-3 bg-gray-800 rounded">
           <h3 class="text-2xl font-bold mb-2 underline-green">GLOBAL PARTICIPATION</h3>
           <p>Anticipating attendees from various countries all over the world.</p>
         </div>
-        <div class="p-6 ml-2 mr-2 bg-gray-800 rounded">
+        <div class="p-6 ml-3 mr-3 bg-gray-800 rounded">
           <h3 class="text-2xl font-bold mb-2 underline-green">INSPIRATIONAL LEARNING</h3>
           <p>Bringing together researchers from several fields to collaborate together and create lasting change.</p>
         </div>
@@ -82,47 +82,47 @@
 
     <section class="py-12 bg-cover" style="background-image: url('progress.jpg');">
       <div class="container mx-auto">
-        <h2 class="text-4xl font-bold text-center mb-8 underline-green">Deadlines</h2>
+        <h2 class="text-4xl font-bold text-center mb-8">Deadlines</h2>
         <div class="flex flex-wrap justify-between">
           <div class="w-full md:w-1/2 p-2">
-            <div class="bg-green-500 p-6 rounded-lg text-black">
-              <h3 class="text-xl font-bold underline-green">Manuscript submissions open:</h3>
+            <div class="bg-white p-6 rounded-lg text-black">
+              <h3 class="text-xl font-bold">Manuscript submissions open:</h3>
               <p>September 1, 2024</p>
             </div>
           </div>
           <div class="w-full md:w-1/2 p-2">
-            <div class="bg-green-500 p-6 rounded-lg text-black">
-              <h3 class="text-xl font-bold underline-green">Deadline for Manuscript submissions:</h3>
+            <div class="bg-white p-6 rounded-lg text-black">
+              <h3 class="text-xl font-bold">Deadline for Manuscript submissions:</h3>
               <p>December 15, 2024</p>
             </div>
           </div>
           <div class="w-full md:w-1/2 p-2">
-            <div class="bg-green-500 p-6 rounded-lg text-black">
-              <h3 class="text-xl font-bold underline-green">Initial review and feedback:</h3>
+            <div class="bg-white p-6 rounded-lg text-black">
+              <h3 class="text-xl font-bold">Initial review and feedback:</h3>
               <p>December 15, 2024 - January 31, 2025</p>
             </div>
           </div>
           <div class="w-full md:w-1/2 p-2">
-            <div class="bg-green-500 p-6 rounded-lg text-black">
-              <h3 class="text-xl font-bold underline-green">Notification of acceptance:</h3>
+            <div class="bg-white p-6 rounded-lg text-black">
+              <h3 class="text-xl font-bold">Notification of acceptance:</h3>
               <p>February 15, 2025</p>
             </div>
           </div>
           <div class="w-full md:w-1/2 p-2">
-            <div class="bg-green-500 p-6 rounded-lg text-black">
-              <h3 class="text-xl font-bold underline-green">Final revised manuscripts due:</h3>
+            <div class="bg-white p-6 rounded-lg text-black">
+              <h3 class="text-xl font-bold">Final revised manuscripts due:</h3>
               <p>March 1, 2025</p>
             </div>
           </div>
           <div class="w-full md:w-1/2 p-2">
-            <div class="bg-green-500 p-6 rounded-lg text-black">
-              <h3 class="text-xl font-bold underline-green">Author registration deadline:</h3>
+            <div class="bg-white p-6 rounded-lg text-black">
+              <h3 class="text-xl font-bold">Author registration deadline:</h3>
               <p>March 7, 2025</p>
             </div>
           </div>
           <div class="w-full md:w-1/2 p-2">
-            <div class="bg-green-500 p-6 rounded-lg text-black">
-              <h3 class="text-xl font-bold underline-green">Conference program finalized:</h3>
+            <div class="bg-white p-6 rounded-lg text-black">
+              <h3 class="text-xl font-bold">Conference program finalized:</h3>
               <p>March 2, 2025</p>
             </div>
           </div>
@@ -140,6 +140,95 @@
         <img src="dblp.png" alt="dblp" class="w-48 h-auto mx-auto" />
         <img src="clarivate-analytics.png" alt="clarivate-analytics" class="w-48 h-auto mx-auto" />
         <img src="google-scholar.png" alt="google-scholar" class="w-48 h-auto mx-auto" />
+      </div>
+    </section>
+
+    <section class="bg-gray-200 py-12 text-black">
+      <div class="container mx-auto text-center mb-8">
+        <h1 class="text-4xl font-bold">Conference Tracks</h1>
+      </div>
+      <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded-lg shadow ml-3 mr-3">
+          <h2 class="text-2xl font-bold mb-2 underline-green">Data Science Foundations:</h2>
+          <p>- Statistical learning theory</p>
+          <p>- Data mining techniques</p>
+          <p>- Big data analytics</p>
+          <p>- Machine learning algorithms</p>
+          <p>- Deep learning techniques</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow ml-3 mr-3">
+          <h2 class="text-2xl font-bold mb-2 underline-green">Computational Intelligence:</h2>
+          <p>- Evolutionary computation</p>
+          <p>- Neural networks</p>
+          <p>- Fuzzy systems</p>
+          <p>- Swarm intelligence</p>
+          <p>- Genetic algorithms</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow ml-3 mr-3">
+          <h2 class="text-2xl font-bold mb-2 underline-green">Applications of Data Science:</h2>
+          <p>- Natural language processing</p>
+          <p>- Image and video analysis</p>
+          <p>- Bioinformatics</p>
+          <p>- Social media analytics</p>
+          <p>- Recommender systems</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow ml-3 mr-3">
+          <h2 class="text-2xl font-bold mb-2 underline-green">Computational intelligence applications:</h2>
+          <p>- Robotics and autonomous systems</p>
+          <p>- Decision support systems</p>
+          <p>- Optimization problems</p>
+          <p>- Computational neuroscience</p>
+          <p>- Intelligent control</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow ml-3 mr-3">
+          <h2 class="text-2xl font-bold mb-2 underline-green">Data Science and Al Ethics:</h2>
+          <p>- Privacy and security in data analytics</p>
+          <p>- Fairness and transparency in Al</p>
+          <p>- Ethical considerations in big data research</p>
+          <!-- <p>- Anonymization techniques</p>
+          <p>- Data breach detection</p> -->
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow ml-3 mr-3">
+          <h2 class="text-2xl font-bold mb-2 underline-green">Data Visualization and Interpretation:</h2>
+          <p>- Visual analytics</p>
+          <p>- Interactive data exploration</p>
+          <p>- Interpretability of machine learning models</p>
+          <!-- <p>- Industrial data science</p>
+          <p>- Smart cities and IoT</p> -->
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow ml-3 mr-3">
+          <h2 class="text-2xl font-bold mb-2 underline-green">Cloud Computing and Virtualization:</h2>
+          <p>- Cloud service models</p>
+          <p>- Containerization technologies</p>
+          <p>- Serverless computing and functions-as-a-service</p>
+          <!-- <p>- Industrial data science</p>
+          <p>- Smart cities and IoT</p> -->
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow ml-3 mr-3">
+          <h2 class="text-2xl font-bold mb-2 underline-green">Software Engineering Practices:</h2>
+          <p>- Agile methodologies and DevOps practices</p>
+          <p>- Software testing and quality assurance</p>
+          <p>- Software architecture and design pattems</p>
+          <!-- <p>- Industrial data science</p>
+          <p>- Smart cities and IoT</p> -->
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow ml-3 mr-3">
+          <h2 class="text-2xl font-bold mb-2 underline-green">Emerging Trends:</h2>
+          <p>- Quantum.computing and data science</p>
+          <p>- Edge computing for data analytics</p>
+          <p>- Blockchain and Al</p>
+          <!-- <p>- Industrial data science</p>
+          <p>- Smart cities and IoT</p> -->
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow ml-3 mr-3">
+          <h2 class="text-2xl font-bold mb-2 underline-green">Industry Applications:</h2>
+          <p>- Financial analytics</p>
+          <p>- Heathcare informatics</p>
+          <p>- Industrial IoT appications</p>
+          <p>- Smart c and arbian analytics</p>
+          <!-- <p>- Industrial data science</p>
+          <p>- Smart cities and IoT</p> -->
+        </div>
       </div>
     </section>
 
