--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         text-decoration: underline;
         text-decoration-color: rgb(34 197 94 / var(--tw-bg-opacity));
       }
+      
 
     </style>
   </head>
@@ -34,7 +35,7 @@
       <div class="container mx-auto">
         <h1 class="text-4xl font-bold mb-2">International Conference on Data Science and Computational Intelligence (ICDSCI)</h1>
         <h2 class="text-2xl mb-2">March 20-21, 2025</h2>
-        <h2 class="text-xl text-black underline mb-4">Conference Proceedings</h2>
+        <h2 class="text-xl underline mb-4">Conference Proceedings</h2>
         <h3 class="text-lg mb-4">ALL ACCEPTED & PRESENTED papers will be published in SCOPUS indexed SPRINGER PROMS.</h3>
         <div class="flex justify-center space-x-4 mb-4">
           <img src="springer.png" alt="Springer" class="h-36 w-36" />
@@ -44,6 +45,11 @@
       </div>
       <img src="pscmr.png" alt="Sample Image" class="mx-auto mb-4" style="max-width: 100%; height: auto;" />
     </header>
+
+    <section class="text-center bg-gray-800">
+      <img src="logo.png" alt="pscmr-logo" class="mx-auto mb-4" style="max-width: 100%; height: 200px;">
+      <p>Potti Sriramulu Chalavadi Mallikarjuna Rao <br> College of Engineering and technology</p>
+    </section>
 
     <section id="conference" class="container mx-auto py-12 p-3">
       <h2 class="text-3xl font-bold mb-4 underline-green">About the Conference</h2>
