--- a/callforPapers.html
+++ b/callforPapers.html
@@ -101,7 +101,7 @@
       </ul>
     </nav>
 
-    <header class="h-[820px] md:h-[583px] text-center text-white bg-green-700">
+    <header class="h-[820px] md:h-[583px] text-center text-white bg-gray-800">
       <div class="flex flex-col md:flex-row h-full">
         <div class="w-full md:w-1/2 px-4 py-24">
           <div class="w-full md:w-1/2 bg-img">
