--- a/callforPapers.html
+++ b/callforPapers.html
@@ -32,10 +32,13 @@
   <body class="bg-gray-100 text-black text-justify">
     <nav class="fixed w-full bg-gray-50 text-black py-3 z-50">
       <div class="container mx-auto flex justify-between items-center px-4">
+        <div class="flex items-center">
+        <img src="springer.png" alt="Springer Logo" class="h-10 mr-2">
         <a href="#" class="text-2xl font-bold">
           <span class="bg-green-700 text-white px-2 py-1 rounded">ICDSCI</span>
           2025
         </a>
+      </div>
         <ul class="hidden md:flex space-x-6">
           <li><a href="index.html" class="hover:text-green-400">Home</a></li>
           <li>
