--- a/callforPapers.html
+++ b/callforPapers.html
@@ -199,7 +199,8 @@
         works-in-progress, and conceptual explorations.
       </p>
     </div>
-    <div class="bg-gray-100  text-black p-3 md:p-10">
+
+    <section class="bg-gray-100  text-black p-3 md:p-10" id="objectives">
       <p class="underline-green font-bold text-xl mb-4 text-center">Objectives</p>
       <div class="text- mx-auto">
         <p class="mb-4">The main objectives of ICAIS-2024 are to:</p>
@@ -223,7 +224,9 @@
           </li>
         </ul>
       </div>
-    </div>
+    </section>
+
+
     <div class="bg-gray-100 text-center text-black p-3 md:p-10">
       <p class="underline-green font-bold text-xl mb-4">
         Important Dates / Deadlines
@@ -286,7 +289,7 @@
       </div>
     </div>
 
-    <section class="bg-gray-100 text-black p-3 md:p-10">
+    <section class="bg-gray-100 text-black p-3 md:p-10" id="outcomes">
       <p class="underline-green font-bold text-xl mb-4 text-center">Outcomes</p>
       <p>
         ICDSCI-2025 aims to make significant contributions to the field of Data
@@ -368,7 +371,7 @@
     </section>
 
 
-    <section class="bg-gray-100 text-black p-3 md:p-10">
+    <section class="bg-gray-100 text-black p-3 md:p-10" id="scope">
       <p class="underline-green font-bold text-xl mb-4 text-center">Scope</p>
       <p><b>ICAIS-2024 will cover a wide range of themes, focusing on the following main areas:</b></p>
       <ul class="list-disc list-inside space-y-6 mt-8">
@@ -383,7 +386,7 @@
       </ul>
     </section>
 
-    <section class="bg-gray-100 text-black p-3 md:p-10">
+    <section class="bg-gray-100 text-black p-3 md:p-10" id="impact">
       <p class="underline-green font-bold text-xl mb-4 text-center">Anticipated Impacts</p>
       <p>
         The International Conference on Data Science and Computational Intelligence (ICDSCI) 2025 is poised to make a significant impact on the field of data science and computational intelligence and beyond. ICDSCI 2025 is expected to have a profound and lasting impact on the advancement of data science and computational intelligence, fostering collaboration, innovation, and ethical development in this rapidly evolving field. The anticipated impacts include:
