--- a/registration.html
+++ b/registration.html
@@ -222,7 +222,7 @@
       </ul>
     </nav>
 
-    <header class="h-[900px] md:h-[600px] text-center text-white bg-green-700 relative">
+<header class="h-[900px] md:h-[600px] text-center text-white bg-green-700 relative">
       <div class="flex flex-col md:flex-row h-full relative z-10">
         <div class="w-full md:w-1/2 px-4 py-24">
           <div class="w-full md:w-1/2">
@@ -293,8 +293,8 @@
         <div class="w-full md:w-1/2 relative overflow-hidden">
           <div class="slideshow">
             <div class="slide" style="background-image: url('PSCMR.jpeg');"></div>
-            <div class="slide" style="background-image: url('st.jpg');"></div>
-            <div class="slide" style="background-image: url('temple.jpg');"></div>
+            <div class="slide" style="background-image: url('pbarrage.jpg');"></div>
+            <div class="slide" style="background-image: url('DurgaTemple.jpg');"></div>
           </div>
         </div>
       </div>
