--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         });
     </script>
 
-    <section id="conference" class="container mx-auto py-12 px-4">
+    <section id="conference" class="container mx-auto py-12 px-4 mt-4 mb-4">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
         <div>
           <h2 class="text-3xl text-left font-bold mb-4 underline-green">
