--- a/callforPapers.html
+++ b/callforPapers.html
@@ -371,8 +371,8 @@
 
         
 
-        <div class="mt-5 w-full md:w-[685px] rounded-lg relative overflow-hidden bg-purple-300 rounded-lg shadow-lg mb-4">
-          <div class="absolute inset-0 bg-cover bg-no-repeat bg-right hidden md:block bg-purple-300" style="background-image: url('deadline.png'); background-size: 300px 500px;"></div>
+        <div class="mt-5 w-full md:w-[685px] rounded-lg relative overflow-hidden bg-gray-300 rounded-lg shadow-lg mb-4">
+          <div class="absolute inset-0 bg-cover bg-no-repeat bg-right hidden md:block bg-gray-300" style="background-image: url('deadline.png'); background-size: 300px 500px;"></div>
           <div class="relative z-10 font-bold p-5 rounded-lg shadow-lg text-black transition duration-300 ease-in-out">
             <h3 class="text-2xl md:text-3xl font-bold mb-3">Important Dates</h3>
             <ul class="list-none space-y-2">
