--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               
               <div class="mySlides fade">
                 <div class="numbertext">2 / 4</div>
-                <img src="barrage.jpg" style="width:100%; height: 200px;">
+                <img src="barrage.jpeg" style="width:100%; height: 200px;">
               </div>
               
               <div class="mySlides fade">
