--- a/sponsors.html
+++ b/sponsors.html
@@ -315,7 +315,7 @@
         });
     </script>
 
-<header class="h-[1150px] md:h-[750px] text-center text-white bg-green-700 relative">
+<header class="h-[1150px] md:h-[700px] text-center text-white bg-green-700 relative">
   <div class="flex flex-col md:flex-row h-full relative z-10">
     <div class="w-full md:w-1/2 px-4 py-24">
       <div class="w-full md:w-1/2">
@@ -349,8 +349,8 @@
         </div>
       </div>
 
-      <h1 class="text-3xl font-bold mb-2 text-center">
-        <img src="autonomous.png" alt="">
+      <h1 class="text-2xl font-bold text-center">
+        <img src="autonomous.jpg" alt=""> <br>
         International Conference on Data Science and Computational Intelligence (ICDSCI) 2025
       </h1> <br>
       <h2 class="text-2xl mb-2">March 20-21, 2025</h2>
@@ -501,13 +501,13 @@
       </div>
     </div>
 
-      <div class="ml-2 md:mt-[50px]">
+      <div class="ml-2 md:mt-[80px]">
         <a href="https://www.pscmr.ac.in/" target="_blank">
           <img
           src="logo.png"
           alt="pscmr-logo"
           class="mb-4 ml-20 md:ml-[100px]"
-          style="max-width: 100%; height: 130px"
+          style="max-width: 100%; height: 160px"
           
         />
         </a>
@@ -518,13 +518,13 @@
           (Autonomous), Vijayawada
         </p>
       </div>
-      <div class="ml-10 md:ml-10 mr-4 md:mt-[30px]">
+      <div class="ml-10 md:ml-10 mr-4 md:mt-[60px]">
         <a href="https://jacksparrowpublishers.com/" target="_blank">
           <img
           src="jslogo.png"
           alt="js-logo"
           class="mb-4 ml-10 md:ml-0"
-          style="max-width: 100%; height: 160px"
+          style="max-width: 100%; height: 190px"
         />
         </a>
         
@@ -535,6 +535,7 @@
       </div>
   </div>
 </section>
+
 
 
 <script>
@@ -599,7 +600,7 @@ document.addEventListener("DOMContentLoaded", function () {
     <div class="bg-green-700 text-white text-center p-3">
       <p class="font-bold text-2xl">Sponsorship Opportunities</p>
     </div>
-    <div class="p-5 md:p-[80px]">
+    <div class="p-5 md:p-[40px]">
       <p>ICDSCI 2024 is technically and finacially sponsored/promoted by:</p>
       <img class="mt-5" src="springer.png" alt="" />
       <p>
