--- a/index.html
+++ b/index.html
@@ -593,9 +593,10 @@
                     <td class="border-b border-gray-300 pl-8 px-6 py-4">February 06th to March 07th, 2025</td>
                 </tr>
                 <tr class="bg-gray-50">
-                    <td class="border-b border-gray-300 pr-8 px-6 py-4">Final revised manuscript</td>
-                    <td class="border-b border-gray-300 pl-8 px-6 py-4">February 06th to March 07th, 2025</td>
+                    <td class="border-b border-gray-300 pr-8 px-6 py-4">Conference Program scheduled</td>
+                    <td class="border-b border-gray-300 pl-8 px-6 py-4">March 20th, 21st, 2025</td>
                 </tr>
+
             </tbody>
         </table>
         <style>
@@ -690,18 +691,18 @@
               </tbody>
           </table>
       
-          <!-- Table 7: Final revised manuscript -->
+          <!-- Table 6: Conference program scheduled -->
           <table class="w-full bg-white shadow-md rounded-lg mb-6">
               <thead>
                   <tr>
                       <th class="bg-green-700 text-white px-6 py-4 text-left">Event</th>
-                      <td class="border-b border-gray-300 pr-8 px-6 py-4">Final revised manuscript</td>
+                      <td class="border-b border-gray-300 pr-8 px-6 py-4">Conference program scheduled</td>
                   </tr>
               </thead>
               <tbody>
                   <tr>
                       <th class="bg-green-700 text-white px-6 py-4 text-left">Date</th>
-                      <td class="border-b border-gray-300 pl-8 px-6 py-4">February 06th to March 07th, 2025</td>
+                      <td class="border-b border-gray-300 pl-8 px-6 py-4">March 20th, 21st, 2025</td>
                   </tr>
               </tbody>
           </table>
