--- a/index.html
+++ b/index.html
@@ -596,7 +596,10 @@
                     <td class="border-b border-gray-300 pr-8 px-6 py-4">Conference Program scheduled</td>
                     <td class="border-b border-gray-300 pl-8 px-6 py-4">March 20th, 21st, 2025</td>
                 </tr>
-
+                <tr class="bg-gray-50">
+                    <td class="border-b border-gray-300 pr-8 px-6 py-4">Final revised manuscript</td>
+                    <td class="border-b border-gray-300 pl-8 px-6 py-4">April 5th, 2025</td>
+                </tr>
             </tbody>
         </table>
         <style>
@@ -703,6 +706,22 @@
                   <tr>
                       <th class="bg-green-700 text-white px-6 py-4 text-left">Date</th>
                       <td class="border-b border-gray-300 pl-8 px-6 py-4">March 20th, 21st, 2025</td>
+                  </tr>
+              </tbody>
+          </table>
+      
+          <!-- Table 7: Final revised manuscript -->
+          <table class="w-full bg-white shadow-md rounded-lg mb-6">
+              <thead>
+                  <tr>
+                      <th class="bg-green-700 text-white px-6 py-4 text-left">Event</th>
+                      <td class="border-b border-gray-300 pr-8 px-6 py-4">Final revised manuscript</td>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <th class="bg-green-700 text-white px-6 py-4 text-left">Date</th>
+                      <td class="border-b border-gray-300 pl-8 px-6 py-4">April 5th, 2025</td>
                   </tr>
               </tbody>
           </table>
