--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                     <td class="border-b border-gray-300 pl-8 px-6 py-4">February 06th to March 07th, 2025</td>
                 </tr>
                 <tr class="bg-gray-50">
-                    <td class="border-b border-gray-300 pr-8 px-6 py-4">Conference Program scheduled</td>
+                    <td class="border-b border-gray-300 pr-8 px-6 py-4 text-left">Conference Program scheduled</td>
                     <td class="border-b border-gray-300 pl-8 px-6 py-4">March 20th, 21st, 2025</td>
                 </tr>
                 <tr class="bg-gray-50">
