--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
               <thead>
                   <tr>
                       <th class="bg-green-700 text-white px-6 py-4 text-left">Event</th>
-                      <td class="border-b border-gray-300 pr-8 px-6 py-4">Manuscript submissions open</td>
+                      <td class="border-b border-gray-300 pr-8 px-6 py-4 text-left">Manuscript submissions open</td>
                   </tr>
               </thead>
               <tbody>
@@ -635,7 +635,7 @@
               <thead>
                   <tr>
                       <th class="bg-green-700 text-white px-6 py-4 text-left">Event</th>
-                      <td class="border-b border-gray-300 pr-8 px-6 py-4">Deadline for manuscript submissions</td>
+                      <td class="border-b border-gray-300 pr-8 px-6 py-4 text-left">Deadline for manuscript submissions</td>
                   </tr>
               </thead>
               <tbody>
@@ -651,7 +651,7 @@
               <thead>
                   <tr>
                       <th class="bg-green-700 text-white px-6 py-4 text-left">Event</th>
-                      <td class="border-b border-gray-300 pr-8 px-6 py-4">Under review timeline</td>
+                      <td class="border-b border-gray-300 pr-8 px-6 py-4 text-left">Under review timeline</td>
                   </tr>
               </thead>
               <tbody>
@@ -667,7 +667,7 @@
               <thead>
                   <tr>
                       <th class="bg-green-700 text-white px-6 py-4 text-left">Event</th>
-                      <td class="border-b border-gray-300 pr-8 px-6 py-4">Notification of acceptance</td>
+                      <td class="border-b border-gray-300 pr-8 px-6 py-4 text-left">Notification of acceptance</td>
                   </tr>
               </thead>
               <tbody>
@@ -683,7 +683,7 @@
               <thead>
                   <tr>
                       <th class="bg-green-700 text-white px-6 py-4 text-left">Event</th>
-                      <td class="border-b border-gray-300 pr-8 px-6 py-4">Author registration deadline</td>
+                      <td class="border-b border-gray-300 pr-8 px-6 py-4 text-left">Author registration deadline</td>
                   </tr>
               </thead>
               <tbody>
@@ -699,7 +699,7 @@
               <thead>
                   <tr>
                       <th class="bg-green-700 text-white px-6 py-4 text-left">Event</th>
-                      <td class="border-b border-gray-300 pr-8 px-6 py-4">Conference program scheduled</td>
+                      <td class="border-b border-gray-300 pr-8 px-6 py-4 text-left">Conference program scheduled</td>
                   </tr>
               </thead>
               <tbody>
@@ -715,7 +715,7 @@
               <thead>
                   <tr>
                       <th class="bg-green-700 text-white px-6 py-4 text-left">Event</th>
-                      <td class="border-b border-gray-300 pr-8 px-6 py-4">Final revised manuscript</td>
+                      <td class="border-b border-gray-300 pr-8 px-6 py-4 text-left">Final revised manuscript</td>
                   </tr>
               </thead>
               <tbody>
